# Grazel

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.MD  WORKSPACE  android_test_maven_install.json  build.gradle  constants.gradle  debug_maven_install.json  dependency-catalog.gradle  gradle.properties  gradlew  maven_install.json  mkdocs.yml  settings.gradle  test_maven_install.json
.bazel/: .default.bazelrc  .test.bazelrc
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/bazel/: action.yml
.github/workflows/: ci.yml
buildsystem/: BUILD.bazel
docs/: bazel_configuration.md  databinding.md  gradle_tasks.md  grazel_extension.md  hybrid_builds.md  index.md  migration_capabilities.md  migration_criteria.md  migration_workflow.md  task_graph.md  task_graph.mmd
docs/css/: site.css
flavor-libs/sample-library-flavor1/: BUILD.bazel  build.gradle
flavor-libs/sample-library-flavor2/: BUILD.bazel  build.gradle
flavor-libs/sample-library-flavor2/src/main/java/com/grab/grazel/android/flavor/: ModuleName.kt
flavor-libs/sample-library-flavor2/src/test/java/com/grab/grazel/flavor2/: ModuleNameTest.kt
flavorLibs/sample-library-flavor1/: BUILD.bazel
flavorLibs/sample-library-flavor2/: BUILD.bazel
gradle/: libs.versions.toml  publish-root-config.gradle  publishing.gradle
gradle/wrapper/: gradle-wrapper.properties
grazel-gradle-plugin/: .gitignore  build.gradle  settings.gradle
grazel-gradle-plugin/gradle-scripts/: functional-test.gradle
grazel-gradle-plugin/src/functionalTest/kotlin/com/grab/grazel/: BaseGrazelPluginTest.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/: GrazelExtension.kt  GrazelGradlePlugin.kt
grazel-gradle-plugin/src/test/kotlin/com/grab/grazel/: GrazelPluginTest.kt
grazel-gradle-plugin/src/test/projects/android-project/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/android-library/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/android-library-flavor/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/app/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/kotlin-library-flavor2/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/kotlin-library2/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/kotlin-library3/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/android-databinding/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/android-library/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/app/: build.gradle
sample-android/: BUILD.bazel  build.gradle  google-services.json
sample-android-flavor/: BUILD.bazel  build.gradle
sample-android-flavor/src/flavor1/java/com/grab/grazel/android/flavor/: HelloFlavorMessage.kt
sample-android-flavor/src/flavor1/res/values/: strings.xml
sample-android-flavor/src/flavor2/res/values/: strings.xml
sample-android-flavor/src/freeApp/res/layout/: activity_flavor.xml
sample-android-flavor/src/freeApp/res/values/: strings.xml
sample-android-flavor/src/main/: AndroidManifest.xml
sample-android-flavor/src/main/java/com/grab/grazel/android/flavor/: BindingAdapter.kt  FlavorActivity.kt
sample-android-flavor/src/main/res/layout/: activity_flavor.xml
sample-android-flavor/src/main/res/values/: strings.xml
sample-android-lib/: BUILD.bazel  build.gradle
sample-android-lib/src/main/: AndroidManifest.xml
sample-android-lib/src/main/java/com/grab/grazel/android/sample/: SampleViewModel.kt
sample-android-lib/src/test/java/com/grab/grazel/android/sample/: SampleViewModelTest.kt
sample-android-lib/src/test/resources/: mock-response.json
sample-android-library/: BUILD.bazel  build.gradle
sample-android-library/src/main/: AndroidManifest.xml
sample-android-library/src/main/java/com/grab/grazel/android/sample/: SampleViewModel.kt
sample-android-library/src/test/java/com/grab/grazel/android/sample/: SampleViewModelTest.kt
sample-android/src/androidTest/: AndroidManifest.xml
sample-android/src/androidTest/java/: JavaTest.java  KotlinTest.kt
sample-android/src/androidTest/resources/: resource.json
sample-android/src/debug/: AndroidManifest.xml
sample-android/src/flavor2Free/: google-services.json
sample-android/src/flavor2Paid/: google-services.json
sample-android/src/free/res/values/: strings.xml
sample-android/src/main/: AndroidManifest.xml
sample-android/src/main/java/com/grab/grazel/android/sample/: ComposeActivity.kt  MainActivity.kt
sample-android/src/main/java/com/grab/grazel/android/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
sample-android/src/main/res-debug/values/: strings.xml
sample-android/src/main/res-release/values/: strings.xml
sample-android/src/main/res/drawable/: ic_launcher_background.xml
sample-android/src/main/res/drawable-v24/: ic_launcher_foreground.xml
sample-android/src/main/res/layout/: activity_main.xml
sample-android/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
sample-android/src/main/res/values/: colors.xml  strings.xml  styles.xml
sample-android/src/main/resources/: main-resrouce.json
sample-android/src/paid/res/values/: strings.xml
sample-kotlin-lib/: BUILD.bazel  build.gradle
sample-kotlin-library/: BUILD.bazel  build.gradle
sample-kotlin-library/src/main/java/com/grab/grazel/sample/: HelloWorld.kt
sample-kotlin-library/src/test/java/com/grab/grazel/sample/: TestClass1.kt
sample-lib-flavor1/: BUILD.bazel  build.gradle
sample-lib-flavor1/src/main/java/com/grab/grazel/android/flavor/: ModuleName.kt
sample-lib-flavor1/src/test/java/com/grab/grazel/flavor1/: ModuleNameTest.kt
sample-lib-flavor2/: BUILD.bazel  build.gradle
sample-lib-flavor2/src/test/java/com/grab/grazel/flavor2/: ModuleNameTest.kt
sample-library-flavor1/: BUILD.bazel
sample-library-flavor2/: BUILD.bazel
(+214 files in other folders)
