load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-flavor_flavor1_debug-build-config",
    package_name = "com.grab.grazel.android.flavor",
)

load("@grab_bazel_common//tools/databinding:databinding.bzl", "kt_db_android_library")

kt_db_android_library(
    name = "sample-android-flavor_flavor1_debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor1/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor1/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-flavor_flavor1_debug-build-config",
        "//:parcelize",
        "//sample-library-flavor1",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)

build_config(
    name = "sample-android-flavor_flavor2_debug-build-config",
    package_name = "com.grab.grazel.android.flavor",
)

kt_db_android_library(
    name = "sample-android-flavor_flavor2_debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor2/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor2/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-flavor_flavor2_debug-build-config",
        "//:parcelize",
        "//sample-library-flavor2",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)

build_config(
    name = "sample-android-flavor_flavor1_release-build-config",
    package_name = "com.grab.grazel.android.flavor",
)

kt_db_android_library(
    name = "sample-android-flavor_flavor1_release",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor1/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor1/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-flavor_flavor1_release-build-config",
        "//:parcelize",
        "//sample-library-flavor1",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)

build_config(
    name = "sample-android-flavor_flavor2_release-build-config",
    package_name = "com.grab.grazel.android.flavor",
)

kt_db_android_library(
    name = "sample-android-flavor_flavor2_release",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor2/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor2/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-flavor_flavor2_release-build-config",
        "//:parcelize",
        "//sample-library-flavor2",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)
