load("@grab_bazel_common//rules:defs.bzl", "android_library")

android_library(
    name = "sample-android-flavor-flavor1-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor1/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor1/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavor-libs/sample-library-flavor1",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
    ],
)

android_library(
    name = "sample-android-flavor-flavor1-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor1/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor1/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavor-libs/sample-library-flavor1",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
    ],
)

android_library(
    name = "sample-android-flavor-flavor2-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor2/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor2/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavor-libs/sample-library-flavor2",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
    ],
)

android_library(
    name = "sample-android-flavor-flavor2-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/flavor2/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_files = glob([
        "src/main/res/**",
    ]) + glob([
        "src/flavor2/res/values/strings.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavor-libs/sample-library-flavor2",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:androidx_core_core",
    ],
)
