load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-library_debug-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android-library_debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library_debug-build-config",
        "//:parcelize",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)

build_config(
    name = "sample-android-library_release-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

kt_android_library(
    name = "sample-android-library_release",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library_release-build-config",
        "//:parcelize",
        "@maven//:org_jacoco_org_jacoco_ant",
    ],
)
