load("@grab_bazel_common//rules:defs.bzl", "android_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

android_library(
    name = "sample-android-library-flavor1-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-flavor1-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-flavor2-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-flavor2-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

grab_android_local_test(
    name = "sample-android-library-flavor1-free-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor1-free-debug-kotlin",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor1-free-debug",
        "@test_maven//:junit_junit",
    ],
)

grab_android_local_test(
    name = "sample-android-library-flavor1-paid-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor1-paid-debug-kotlin",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor1-paid-debug",
        "@test_maven//:junit_junit",
    ],
)

grab_android_local_test(
    name = "sample-android-library-flavor2-free-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor2-free-debug-kotlin",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor2-free-debug",
        "@test_maven//:junit_junit",
    ],
)

grab_android_local_test(
    name = "sample-android-library-flavor2-paid-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor2-paid-debug-kotlin",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor2-paid-debug",
        "@test_maven//:junit_junit",
    ],
)
